--- a/roadmap.html
+++ b/roadmap.html
@@ -105,7 +105,7 @@
               <span>LUXURIOUS PRO NETWORK TOKEN GROUP’s </span> ROADMAP
             </h1>
             <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
-              A Cryptocurrency Adding Value To The Financial Experience Of Everyone
+              A Cryptocurrency Adding Value To The Financial Experience Of Everyone.
             </h3>
           </div>
         </div>
@@ -140,8 +140,8 @@
             <p style="font-size:20px;"><strong>Powered by Blockchain and smart contracts, LPNT is developing a
                 global data-driven platform for the world.</strong> </p>
             <p><strong>Knowing about the roadmap in two parts will help you understand the project in detail.
-                <br><br></p></strong>
-            <p><strong>The first part is about the LPN TOKEN advisory board members.</p></strong> <br><br>
+            </p></strong>
+            <p><strong>The first part is about the LPN TOKEN advisory board members.</strong> </p>
             <p><strong>The second part of this roadmap will tell you about the value LPN TOKEN Is likely to offer in
                 the future.</strong> </p>
           </div>
@@ -174,7 +174,7 @@
             <p><big>Mr. Satish Mostra</big> <strong>is an experienced leader as well as a fund manager. <br><br>Since
                 2008, he has been helping multiple companies scale new peaks of growth every day with his remarkable
                 leadership and skills. <br><br>Let’s know his journey in detail.</strong></p>
-            <p><strong>His contribution to the growth and success of NFX, Bloom Drive and Ensofx also cannot be
+            <p><strong>His contribution to the growth and success of NFX, Bloom Drive and Ensorfx also cannot be
                 underestimated.</strong> </p>
           </div>
         </div>
@@ -187,7 +187,7 @@
                 <p>He graduated in the domain of
                   Accounting with A Grade before
                   mastering Finance and Fund
-                  Management in Forex Trading in 2008.
+                  Management in the domain of Forex Trading in 2008.
                   He put his business-related education
                   and skills to use in multiple industries
                   before becoming the very best that he
@@ -198,7 +198,7 @@
                   best that he is today in his profession.
                   This is why he has been able to lead
                   many complex projects to the top. For
-                  example:
+                  example: <br>
                   He announced his arrival in the world
                   of business in 2008 through a
                   computer education startup. It turned
@@ -231,7 +231,7 @@
                   inception in the domain of Banking
                   Finance Investment in Forex Trading in
                   2011. This was the dream opportunity
-                  that he was looking for.</p>
+                  that he had been looking for a long period of time.</p>
               </li>
               <li>
                 <small class="circle"></small>
@@ -248,7 +248,7 @@
               <li>
                 <small class="circle"></small>
                 <span>2014</span>
-                <p>But he put his first step in the direction of becoming a successful and reliable Financial Fund
+                <p>He put his first step in the direction of becoming a successful and reliable Financial Fund
                   Manager and FX Trading Portfolio Manager through cryptocurrency investment in
                   2014.</p>
                 <p> This was the time when Mr. Satish successfully earned the trust of the world’s leading Financial
@@ -266,7 +266,7 @@
                 <small class="circle"></small>
                 <span>2018</span>
                 <p>The year 2018 added new value to his career with the launch of LPN Group (LUXURIOUS PRO NETWORK
-                  GROUP), a global leader in the domain of luxurious transportation and forex 2019 trading. </p>
+                  GROUP), a global leader in the domain of luxurious transportation and forex trading. </p>
               </li>
               <li>
                 <small class="circle"></small>
@@ -291,9 +291,10 @@
 
   <section class="Content_section About_user">
     <div class="content_text_block blue_bg">
-      <p>All in all, he has proved himself, his abilities, dedication, services and expertise continuously since 2008.
+      <p>All in all, he has been proving himself, his abilities, dedication, services and expertise continuously since
+        2008.
         The award of the Best Financial Services Provider, Political and Public Life Awards in 2004, 2008, 2010, 2014
-        and 2004 speaks volumes in this regard.</p>
+        and 2018 speaks volumes in this regard.</p>
     </div>
   </section>
 
@@ -311,16 +312,18 @@
       <div class="row align-items-start">
         <div class="col-sm-6">
           <div class="content_text_block">
-            <p>NEXT Forex is building financial strength and businesses and individuals from all parts of the world need
-              for growth. Since 2005, the organization has also been connecting traders to currency markets
+            <p>NEXT Forex is building financial strength for businesses and individuals from all parts of the world.
+              Since 2005, the organization has also been connecting traders to currency markets
               worldwide.</p>
             <p>NEXT Forex is on a mission to serve clients with the best digital forex solutions. Following are the
               specifications of these solutions:</p>
-            <ul>
-              <li>Fulfill small forex investment requirements</li>
-              <li>Offers value for retail clients.</li>
-              <li>Focus on long term-fruitful cooperation with clients, partners and employees.</li>
-            </ul>
+            <div class="bus">
+              <ul>
+                <li>Fulfill small forex investment requirements</li>
+                <li>Offers value for retail clients.</li>
+                <li>Focus on long term-fruitful cooperation with clients, partners and employees.</li>
+              </ul>
+            </div>
           </div>
 
 
@@ -335,17 +338,19 @@
               using the transparency of communication and let them make the most of
               the following to achieve financial growth:
             </p>
-            <ul class="clr-black">
-              <li><span><i class="fa fa-angle-right"></i></span> FX trading.</li>
-              <li><span><i class="fa fa-angle-right"></i></span> Investment in Futures.</li>
-              <li><span><i class="fa fa-angle-right"></i></span> Investment in Indices.</li>
-              <li><span><i class="fa fa-angle-right"></i></span> Investment in energies and metals.</li>
-              <li><span><i class="fa fa-angle-right"></i></span> Best bids and offers.</li>
-              <li><span><i class="fa fa-angle-right"></i></span> Quick execution of orders at the current market prices.
-              </li>
-              <li><span><i class="fa fa-angle-right"></i></span> Single-click trading.</li>
-              <li><span><i class="fa fa-angle-right"></i></span> Trading styles/strategies free of restrictions.</li>
-            </ul>
+            <div class="bus">
+              <ul class="clr-black">
+                <li>FX trading.</li>
+                <li>Investment in Futures.</li>
+                <li>Investment in Indices.</li>
+                <li>Investment in energies and metals.</li>
+                <li>Best bids and offers.</li>
+                <li>Quick execution of orders at the current market prices.
+                </li>
+                <li>Single-click trading.</li>
+                <li>Trading styles/strategies free of restrictions.</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -390,32 +395,33 @@
               <p>The organization makes it possible with feature-rich and affordable
                 Standard, Premium and Executive trading accounts. The organization is
                 also held in high esteem worldwide for providing trustworthy and
-                useful market analytics for hassle-free financial trading in all domains. </p>
-              <p>The list includes but is not limited to the following only:
-
-              </p>
-              <ul class="clr-black">
-                <li><span><i class="fa fa-angle-right"></i></span> PIP and profit calculator.
-                <li><span><i class="fa fa-angle-right"></i></span> Economic and central bank calendar.</li>
-                <li><span><i class="fa fa-angle-right"></i></span> Forex/market news.</li>
-                <li><span><i class="fa fa-angle-right"></i></span> F X Charts and currency indices.</li>
-                <li><span><i class="fa fa-angle-right"></i></span> Market settlements, market signals and market
-                  sentiments. </li>
-              </ul>
+                useful market analytics for hassle-free financial trading in all domains.
+                The list includes but is not limited to the following only: </p>
+              
+              <div class="bus">
+                <ul class="clr-black">
+                  <li>PIP and profit calculator.
+                  <li>Economic and central bank calendar.</li>
+                  <li>Forex/market news.</li>
+                  <li>FX Charts and currency indices.</li>
+                  <li>Market settlements, market signals and market
+                    sentiments. </li>
+                </ul>
+              </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="content_text_block">
               <p>This is how NFX has proven to be the best financial technology vendor
-                businesses stepping the domain of decentralized finance needs for
+                businesses stepping in the domain of decentralized finance need for
                 growth.
               </p>
               <p>LUXURIOUS PRO NETWORK TOKEN GROUP is the best example of it. This
                 decentralized financial technology solution has come to life in just
                 march, 2020. The organization has already managed the development
-                of more than 100,000 worldwide LPN TOKEN users.
+                of more than 200,000 worldwide LPN TOKEN users.
               </p>
-              <p>The organization has declared the development many more things for
+              <p>The organization has declared the development og many more things for
                 their target market. The credit goes to the financial solutions and
                 platforms designed, developed and provided by the NEXT Forex.
               </p>
@@ -441,14 +447,14 @@
       <div class="row text-center">
         <div class="col-lg-12">
           <div class="title_dark ">
-            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">FUTURE</span>
+            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">PAST & FUTURE</span>
             <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
               Roadmap
             </h2>
           </div>
           <div class="timeline-content text-center">
             <p>LPN TOKEN is the most ambitious project of the LUXURIOUS PRO NETWORK GROUP.</p>
-            <p>LPNT GROUP is not a company. It is actually a a group of many organization focused developing a
+            <p>LPNT GROUP is not a company. It is actually a group of many organization focused on developing a
               cryptocurrency capable of changing the way you transact.</p>
             <p>The group is also undisputed global leader in the domain of Luxurious transportation services and forex
               trading.</p>
@@ -807,7 +813,7 @@
   </section>
 
   <!-- START SECTION WHITEPAPER & CONTACT -->
- 
+
   <!-- START SECTION WHITEPAPER & CONTACT -->
 
   <!-- START CLIENTS SECTION -->
@@ -888,18 +894,20 @@
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
                 <a href="https://www.facebook.com/LpnTokenPro/" target="_blank"><i class="ion-social-facebook"></i></a>
               </li>
-              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
                 <a href="https://twitter.com/lpntoken" target="_blank"><i class="ion-social-twitter"></i></a>
               </li>
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+                <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" target="_blank"><i
+                    class="ion-social-youtube"></i></a>
+              </li>
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+                <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i class="ion-social-linkedin"
+                    target="_blank"></i></a>
+              </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-                <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" target="_blank"><i class="ion-social-youtube"></i></a>
-              </li>
-              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.7s">
-                <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i
-                    class="ion-social-linkedin" target="_blank"></i></a>
-              </li>
-              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.9s">
-                <a href="https://t.me/LPNT_Official" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                <a href="https://t.me/LPNT_Official" target="_blank"><i class="fa fa-telegram"
+                    aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
