--- a/what-is-lpnt.html
+++ b/what-is-lpnt.html
@@ -103,7 +103,7 @@
               <span>INTRODUCTION TO </span> LUXURIOUS PRO NETWORK TOKEN
             </h1>
             <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
-              A Cryptocurrency Adding Value To The Financial Experience Of Everyone
+              A Cryptocurrency Adding Value To The Financial Experience Of Everyone.
             </h3>
           </div>
         </div>
@@ -135,7 +135,7 @@
               About LPNT GROUP
             </h2>
             <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-              TPNT (LUXURIOUS PRO NETWORK) Group is an undisputed global leader in the domain of luxurious
+              LPNT (LUXURIOUS PRO NETWORK) Group is an undisputed global leader in the domain of luxurious
               transportation and forex trading.
             </p>
             <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
@@ -220,7 +220,7 @@
                 Most of the people feel this pain. But the use of LPN TOKEN takes this pain away.
               </p>
               <p>
-                Meaning, LPN TOKEN is the best cryptocurrency to invest in because its users do not have to worry about
+                Meaning, LPN TOKEN is the best cryptocurrency to invest in. Its users do not have to worry about
                 expensive transaction fee and chargeback.
               </p>
             </div>
@@ -234,8 +234,8 @@
               </div>
               <h4>International Use </h4>
               <p>
-                Cryptocurrencies are a borderless means of exchange allowing for instant and cost-effective transactions
-                across the world.
+                Cryptocurrencies are a borderless means of exchange allowing instant and cost-effective transactions
+                worldwide.
               </p>
               <p>
                 There is no waiting, no international fees and no limitations as to who can or cannot send funds to whom
@@ -308,7 +308,7 @@
                 The legacy:
               </h2>
               <p>
-                LPN TOKEN is a multi-utility token based on ERC20. It is a blockchain-based asset that offers
+                LPN TOKEN is a multi-utility token based on ERC20 protocol. It is a blockchain-based asset that offers
                 functionality like the functionality of Ether. This is why LPN TOKEN is one of the best cryptocurrencies
                 to invest in. LPNT can be used for the following:
               </p>
@@ -335,7 +335,7 @@
                 The list of its specifications includes but is not limited to the following only:
               </p>
 
-              <div class="key-specifications-of-LPNT">
+              <div class="key-specifications-of-LPNT bus">
                 <ul>
                   <li>This decentralized cryptocurrency leverages the potential of P2P (Peer-to-Peer) technology to
                     ensure
@@ -372,23 +372,24 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="title_dark">
               <p>
-                LPN TOKEN, a decentralized multi-utility token can be used in almost every industry. The list includes
+                LPN TOKEN, a decentralized multi-utility token that can be used in almost every industry. The list
+                includes
                 but is not limited to the following only:
               </p>
               <div class="bus">
                 <ul>
-                  <li> Finance </li>
-                  <li> e-commerce </li>
-                  <li> Restaurants </li>
-                  <li> Real-estates </li>
-                  <li> Shopping </li>
+                  <li> Finance. </li>
+                  <li> e-commerce. </li>
+                  <li> Restaurants. </li>
+                  <li> Real-estates. </li>
+                  <li> Shopping. </li>
                 </ul>
                 <ul>
-                  <li> Forex Trading </li>
-                  <li> Hotels </li>
-                  <li> Flights booking </li>
-                  <li> Recharge </li>
-                  <li> Transportations etc </li>
+                  <li> Forex Trading. </li>
+                  <li> Hotels. </li>
+                  <li> Flights booking. </li>
+                  <li> Recharge. </li>
+                  <li> Transportations etc. </li>
                 </ul>
               </div>
             </div>
@@ -401,18 +402,18 @@
               </p>
               <div class="bus">
                 <ul>
-                  <li> Homes </li>
-                  <li> Boats </li>
-                  <li> Clothing </li>
-                  <li> Health and pet products </li>
-                  <li> Wine </li>
+                  <li> Homes. </li>
+                  <li> Boats. </li>
+                  <li> Clothing. </li>
+                  <li> Health and pet products. </li>
+                  <li> Wine. </li>
                 </ul>
                 <ul>
-                  <li> Condos </li>
-                  <li> Cars </li>
-                  <li> Electronics </li>
-                  <li> Food </li>
-                  <li> Accessories etc etc </li>
+                  <li> Condos. </li>
+                  <li> Cars. </li>
+                  <li> Electronics. </li>
+                  <li> Food. </li>
+                  <li> Accessories etc etc. </li>
                 </ul>
               </div>
             </div>
@@ -488,21 +489,21 @@
               </form>
             </div>
             <ul class="list_none footer_social">
-              <li>
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
                 <a href="https://www.facebook.com/LpnTokenPro/" target="_blank"><i class="ion-social-facebook"></i></a>
               </li>
-              <li>
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
                 <a href="https://twitter.com/lpntoken" target="_blank"><i class="ion-social-twitter"></i></a>
               </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" target="_blank"><i
-                    class="ion-social-youtube"></i></a>
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+                <a href="https://www.youtube.com/watch?v=S1zQs14uxK8"><i class="ion-social-youtube target="
+                    _blank""></i></a>
               </li>
-              <li>
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
                 <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i class="ion-social-linkedin"
                     target="_blank"></i></a>
               </li>
-              <li>
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
                 <a href="https://t.me/LPNT_Official" target="_blank"><i class="fa fa-telegram"
                     aria-hidden="true"></i></a>
               </li>
