--- a/services.html
+++ b/services.html
@@ -100,10 +100,10 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
           <div class="banner_text">
             <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
-              <span>LUXURIOUS PRO NETWORK TOKEN GROUP’s </span> SERVICES INSIGHT
+              <span>LUXURIOUS PRO NETWORK GROUP’s </span> SERVICES INSIGHT
             </h1>
             <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
-              A Cryptocurrency Adding Value To The Financial Experience Of Everyone
+              A Cryptocurrency Adding Value To The Financial Experience Of Everyone.
             </h3>
           </div>
         </div>
@@ -186,7 +186,7 @@
       <div class="row align-items-center">
         <div class="dcpg-p text-center col-lg-12 col-md-12 col-sm-12">
           <p>All in all, this is how LUXURIOUS PRO NETWORK TOKEN decentralized cryptocurrency payment gateway makes
-            LPN TOKEN the best cryptocurrency to invest in 2021. </p>
+            LPN TOKEN the best cryptocurrency to invest. </p>
         </div>
       </div>
     </div>
@@ -199,14 +199,15 @@
     <div class="container">
       <div class="row align-items-center">
         <dv class="col-lg-12 col-md-12 col-sm-12">
-          <div class="title_dark">
+          <div class="title_dark text-center">
             <h2 class="margin0 section_title text-center animation" data-animation="fadeInUp"
               data-animation-delay="0.3s">
-              Pairing of LPN TOKEN
+              FOREX TRADING WITH
             </h2>
             <h2 class="section_margin text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              with USD
+              LPN TOKEN
             </h2>
+            <small>(Pairing of lpn token with US dollar)</small>
           </div>
         </dv>
       </div>
@@ -215,14 +216,29 @@
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="title_dark">
             <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-              We have already paired LPN TOKEN with the US Dollar. Therefore, LPN TOKEN has become world’s second
-              cryptocurrency to have achieved this incredible feat after JP Morgan Group, world’s largest liquidity
-              provider.
+              This thing is a huge worldwide network of buyers and sellers. Forex trading can also be termed as the
+              largest global and decentralized liquidity market that records transactions of nearly five trillion US
+              dollars every day.
             </p>
             <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-              This incredible feat achieved by our team allows our user base to trade in multiple domains. The list
-              includes but is not limited to the following only: </p>
-
+              Coming to the point, the LUXURIOUS PRO NETWORK TOKEN GROUP serves traders with MT-4 and MT-5, the best
+              forex trading solutions in the world. </p>
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+              We also house a team of heavily experienced fund managers. We are continuously making efforts to pair USD
+              and many other currencies with LPN TOKEN.</p>
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+              For your kind information, LUXURIOUS PRO NETWORK TOKEN is the world’s second cryptocurrency initiative to have paired
+              with the US dollar after JP Morgan Group.
+            </p>
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+              As far as the process of forex trading is concerned, it will commence with the sale of LPN TOKENS through
+              trading accounts using in-house algorithms.
+            </p>
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+              All intermediaries are removed from the process to make forex trading a positive experience for traders.
+              This is how this attribute also makes LUXURIOUS PRO NETWORK TOKEN one of the best cryptocurrency to invest
+              in.</p>
+              <p>Forex trading using LPN Token is made possible by the Next FX technologies llc</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -267,7 +283,7 @@
               successfully complete the registration process, will be able to pay the match/tournament fee using LPN
               TOKENS to play the match/tournament. </p>
             <p>
-              Moreover, it also helps registered users sign a smart contract and to access live trading to enter the
+              Moreover, it also helps registered users sign a smart contract and access live trading to enter the
               world of financial planning and unlimited opportunities of growth. </p>
             <p>
               This helps users trade in any zone using their credentials. In addition to all this, this decentralized
@@ -306,24 +322,24 @@
             <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
               More than 5000 cryptocurrencies are available in the market today. All of them are focused on making
               people trade their money only. This is where our LPN TOKEN stands out of the crowd to be the best
-              cryptocurrency to invest in 2021.
+              cryptocurrency to invest in.
             </p>
             <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-              LPN TOKEN stands for LUXURIOUS PRO NETWORK TOKEN. It is multi-utility to decentralized token based on
+              LPN TOKEN stands for LUXURIOUS PRO NETWORK TOKEN. It is a multi-utility decentralized token based on
               ERC20 protocol of Ethereum blockchain. </p>
           </div>
         </div>
         <div class="key-attributes-page col-md-12">
           <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
             Well, this information is merely the tip of the entire iceberg. Meaning, you must know about some
-            attributes that make LPN TOKEN the best cryptocurrency to invest in 2021.
+            attributes that make LPN TOKEN the best cryptocurrency to invest in.
           </p>
           <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-            This is the first key thing you must know about LPNT. The Group is focused on exceeding the requirement
-            and expectations of users through a beta version decentralized wallet.
+            The Group is focused on exceeding the requirement
+            and expectations of users through a decentralized crypto wallet.
           </p>
           <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-            The use of this feature-rich, multi-utility and safe wallet wills users to perform many tasks. The list
+            The use of this feature-rich, multi-utility and safe wallet will help users perform many tasks. The list
             includes but is not limited to the following: </p>
         </div>
       </div>
@@ -438,27 +454,27 @@
                 </div>
               </div>
               <div class="col-lg-6">
-              <div class="bus">
+                <div class="bus">
 
-                <ul>
-                  <li> Plane/bus and train tickets </li>
-                  <li> Internet services </li>
-                  <li> Dating services </li>
-                  <li> Crypto gear </li>
-                  <li> Vacations </li>
-                  <li> Tools </li>
-                  <li> Wine </li>
-                  <li> Food </li>
-                  
+                  <ul>
+                    <li> Plane/bus and train tickets </li>
+                    <li> Internet services </li>
+                    <li> Dating services </li>
+                    <li> Crypto gear </li>
+                    <li> Vacations </li>
+                    <li> Tools </li>
+                    <li> Wine </li>
+                    <li> Food </li>
 
-                </ul>
+
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-    </div>
+      </div>
 
     </div>
     <div class="shape shap1"></div>
@@ -551,18 +567,18 @@
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
                 <a href="https://www.facebook.com/LpnTokenPro/" target="_blank"><i class="ion-social-facebook"></i></a>
               </li>
-              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
                 <a href="https://twitter.com/lpntoken" target="_blank"><i class="ion-social-twitter"></i></a>
               </li>
-              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
                 <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" target="_blank"><i
                     class="ion-social-youtube"></i></a>
               </li>
-              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.7s">
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
                 <a href="https://www.linkedin.com/company/luxurious-pro-network-token/" target="_blank"><i
                     class="ion-social-linkedin"></i></a>
               </li>
-              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.9s">
+              <li class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
                 <a href="https://t.me/LPNT_Official" target="_blank"><i class="fa fa-telegram"
                     aria-hidden="true"></i></a>
               </li>
