--- a/terms.html
+++ b/terms.html
@@ -1037,7 +1037,7 @@
             }
         });
     </script>
-
+    <script src="//code.tidio.co/n2ohfrgujq6417jkm9yupkshr0onfchz.js" async></script>
 </body>
 
 </html>
