--- a/index.html
+++ b/index.html
@@ -1662,6 +1662,7 @@
 
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+  <script src="//code.tidio.co/n2ohfrgujq6417jkm9yupkshr0onfchz.js" async></script>
 </body>
 
 </html>
